Make create account box overflow. Fixes #36

--- a/src/app/styles/createAccount.module.css
+++ b/src/app/styles/createAccount.module.css
@@ -3,6 +3,7 @@
     height: 60%;
     margin: auto;
     background-color: #CBC0AE;
+    overflow: auto;
 }
 
 .title {
@@ -12,12 +13,12 @@
 }
 
 .container > form {
-    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .formGroup {
